# factorion

./: .dockerignore  .gitignore  BENCHMARK.md  CLAUDE.md  Dockerfile.ci-gpu  EXPERIMENTS.md  QUALITY_BENCHMARK.md  README.md  b64-to-json.py  benchmark.sh  factorion.py  generate-training-data.py  grpo.py  json-to-b64.py  measure.sh  ppo.py  pyproject.toml  quality_measure.sh  quality_results.csv  quality_run.sh  requirements.txt  results.csv  rsync_to_algernon.sh  run.sh  run_sft_sweep.sh  run_sweep.sh  runpod_start.sh  sft.py  sft_bench_measure.sh  sft_bench_results.csv  sft_bench_run.sh  sft_sweep.yaml  sweep.yaml  test_throughput.py  throughput.py  train.py  training_config.py
.claude/hooks/: session-start.sh
.github/workflows/: ci-command.yml  ci-reporter.yml  ci-selftest.yml  ci.yml  launch.yml  model-gallery.yml  pod-watchdog.yml  (+2 more)
blueprints/: 0eNp1j90KgzAMRl+l5Lr.json  0eNp1j90KgzAMRl9Fcl0.json  0eNp1j90KgzAMRl9Fcl1.json  0eNp1z90KgzAMBeBXkVx.json  0eNqNkM1qwzAMgF_F6Ow.json  0eNqNkNsKgzAMhl9Fcl0.json  0eNqNkNsKwjAMhl9l5Lo.json  0eNqV0+9qwyAQAPBXOe6.json  0eNqV011qwzAMAOCrCD2.json  0eNqV011qwzAMB_CrGD2.json  0eNqV081qwzAMAOBXETo.json  0eNqV081qwzAMB_BXMTq.json  0eNqV081ugzAMB_BXiXx.json  0eNqV081uwyAMB_BXQT7.json  0eNqV08FOwzAMBuBXsXz.json  0eNqV0cFqwzAMBuBXMTq.json  0eNqV0ctqwzAQBdBfMbN.json  0eNqV0k1qwzAQBeCrmFk.json  0eNqV0lFrwyAQB_CvIvd.json  0eNqV0s1qwzAMB_BXMTq.json  0eNqV0sFqwzAMBuBXMTq.json  0eNqV0sFugzAMBuBXiXx.json  0eNqV0t2KgzAQBeBXkbl.json  0eNqV1M1qxCAQB_BXkTm.json  0eNqV1M1uwyAMB_BXQT7.json  0eNqV1OFqwyAQAOBXOe6.json  0eNqV1OFqwyAQAOBXkft.json  0eNqV1OFqwyAQB_BXkft.json  0eNqV1c1qxCAQB_BXkTm.json  0eNqV1dFuwiAUxvFXIec.json  0eNqVkN1qwzAMhV_F6No.json  0eNqVkdsKwjAMhl9l5Lq.json  0eNqd0+FqwyAQB_BXOe6.json  0eNqd0+FqwyAQB_BXkft.json  0eNqd001uwyAQBeCroFm.json  0eNqd00uKwzAMBuCrGK3.json  0eNqd011qwzAMAOCrCD0.json  0eNqd01FqwzAMANCrCH0.json  0eNqd01FvwiAQB_CvQu6.json  0eNqd081qwzAMB_BXMTo.json  (+140 more)
ci/: HELP.md  README.md  __init__.py  __main__.py  cli.py  config.py  gh_command.py  github_api.py  jobs.py  launch.py  report.py  runner.sh  runpod_api.py  stats.py  sweep_ppo.yaml  sweep_sft.yaml  watchdog.py
data/: download_blueprints.py  download_codex.py  download_fbc.py  filter_dedup.py  normalise_map_1_1_to_2_0.json  unpack_individual.py  vanilla_whitelist.txt
docker/: Dockerfile.ci-gpu
docs/: EXPERIMENTS.md  FUTURE_LESSONS.md  PERFORMANCE_IMPROVEMENTS.md
factorion-mod/: .gitignore  CLAUDE.md  README.md
factorion_rs/: Cargo.toml  __init__.pyi  pyproject.toml
factorion_rs/src/: blueprints.rs  entities.rs  factory_gen.rs  graph.rs  lane_flow.rs  lib.rs  pyrandom.rs  render.rs  rng.rs  textual.rs  throughput.rs  types.rs  world.rs
factorion_rs/tests/: connectivity_cases.txt
factorion_rs/tests/factories/: assembler.txt  assembler.yaml  assembler_crafting_speed_limit.yaml  assembler_perimeter.yaml  belt_chain.txt  belt_chain.yaml  belt_junction.yaml  belt_loop.yaml  belt_to_other.yaml  bottlenecks.yaml  connections.yaml  fanout_87.yaml  graph_regressions.yaml  ignored.yaml  inserter_into_source.yaml  inserter_splitter.yaml  inserter_to_other.yaml  lane_curves_and_sideloads.yaml  lane_isolated_pickup.yaml  long_handed_inserter.yaml  long_handed_inserter_assembler_block.yaml  long_handed_inserter_faster_than_regular.yaml  long_handed_inserter_multitile.yaml  long_handed_inserter_reach_distance.yaml  long_handed_inserter_skip.yaml  long_handed_inserter_source_sink.yaml  long_handed_inserter_throughput.yaml  long_handed_inserter_to_other.yaml  long_handed_inserter_underground.yaml  mining_drill.yaml  my-factory.yaml  source_intake_and_underground_gap.yaml  source_sink_connections.yaml  splitter_merge.yaml  splitter_split.txt  splitter_split.yaml  underground_belt_to_other.yaml
lesson_blueprints/: 006.txt  009.txt  010.txt  1-in-1-out-asm-2x-undergrounds-v2.txt  1-in-1-out-asm-4x-undergrounds.txt  1-in-1-out-asm-inline-equidist-2x-v2.txt  1-in-1-out-asm-inline-equidist-2x.txt  1-in-1-out-asm-inline-equidist-4x-v2.txt  1-in-1-out-asm-inline-equidist-4x.txt  1-in-1-out-asm-inline-equidist-8x.txt  1-in-1-out-asm-untitled-001.txt  1-in-1-out-asm-untitled-002.txt  1-in-1-out-asm-untitled-003.txt  1-in-1-out-asm-untitled-004.txt  1-in-1-out-asm-untitled-005.txt  1-in-1-out-asm-untitled-007.txt  1-in-1-out-asm-untitled-008.txt  1-in-1-out-asm-untitled-011.txt  1-in-1-out-asm-untitled-012.txt  1-in-1-out-asm-untitled-013.txt  1-in-1-out-asm-untitled-014.txt  1-in-1-out-asm-untitled-015.txt  1-in-1-out-asm-untitled-016.txt  1-in-1-out-asm-untitled-017.txt  1-in-1-out-asm-untitled-018.txt  1-in-1-out-asm-untitled-019.txt  1-in-1-out-asm-untitled-020.txt  1-in-1-out-asm-untitled-021.txt  1-in-1-out-asm-untitled-022.txt  1-in-1-out-asm-untitled-023.txt
masked_encoder/: .gitignore  sweep.yaml  test_gpu.py  train.py  vectoriser.py  vocabs.json
scripts/: _log_result.py  connectivity_ground_truth.txt  factory_builder.py  gen_connectivity_oracle.py  model_gallery.py  spot_check.py  visualise_sft_data.py
tests/: bench_build_factory.py  bench_throughput.py  conftest.py  helpers.py  test_action_masking.py  test_asm_placement.py  test_async_env.py  test_async_envs.py  test_bfs.py  test_blueprint_decode.py  test_build_factory_parity.py  test_ci_gh_command.py  test_ci_infra.py  test_cross_under_belt.py  test_curriculum_sampling.py  test_curriculum_score.py  test_device_guard.py  test_early_termination.py  test_entropy_schedule.py  test_factory_builder.py  test_factory_cost.py  test_from_blueprint_lesson.py  test_graph_construction.py  test_graph_rust_equivalence.py  test_grid_sizes.py  test_grpo.py  test_handcrafted.py  test_lanes.py  test_lesson_generation.py  test_mask.py  test_max_steps.py  test_mine_ore.py  test_model_gallery.py  test_move_one_item_throughput.py  test_num_missing_entities.py  test_numpy_buffer.py  test_parity.py  test_parity_spec.py  test_partial_entity_robustness.py  test_placeholder.py  (+17 more)
wiki/: README.md  assembling-machine.md  glossary.md  inserter.md  items-and-recipes.md  splitter.md  transport-belt.md  two-lane-system.md  underground-belt.md
(+50 files in other folders)
