[project]
name = "factorion"
version = "0.1.0"
requires-python = ">=3.11"
# Direct runtime imports across ppo.py / sft.py / factorion.py / scripts / the
# mod server. The compiled `factorion_rs` extension is built separately with
# `maturin develop` (see `factorion_rs/`), not resolved from PyPI.
dependencies = [
    "torch",
    "numpy",
    "gymnasium",
    "networkx",
    "tyro",
    "tqdm",
    "matplotlib",
    "pandas",
    "plotly",
    "wandb",
    "tensorboard",
    "runpod",
    "pyyaml",
    "pillow",
    "requests",  # ci/github_api.py
]

# Tooling for the pre-commit/pre-push checklist (`uv sync` installs these too).
[dependency-groups]
dev = [
    "ruff==0.11.8",
    "pytest",
    "pytest-timeout",
    "maturin",
    "ty==0.0.19",  # pre-1.0: pin exactly so a ty release can't surprise the pre-push gate
]

[tool.uv]
# This repo is a collection of scripts, not an installable package, so don't
# try to build/install the project itself — just manage its dependencies.
# torch resolves from PyPI: CPU-only on macOS, CUDA-capable on Linux (so GPU
# boxes work). CI installs CPU-only torch separately for its smoke tests.
package = false

[tool.ty.environment]
# First-party modules imported flat by their siblings (tests do `import helpers`,
# the mod server imports `blueprint`). These dirs are on sys.path at runtime
# (pytest rootdir insertion / cwd), so mirror them here for ty's module
# resolution. The ci/ package is imported from the repo root, so it needs no
# extra path.
extra-paths = ["tests", "scripts", "factorion-mod/server"]

[tool.ruff]
# Existing code has many pre-existing violations in the training script.
# Ignoring rules that are pervasive but low-risk, while keeping rules
# that catch real bugs.
extend-exclude = [
    ".claude",  # local Claude Code state and per-agent worktrees
]
lint.select = ["E", "F", "W"]
lint.ignore = [
    "E501",  # line too long (pervasive in existing code)
    "F541",  # f-string without placeholders (pervasive in debug logging)
    "F841",  # local variable assigned but unused (WIP code)
    "E722",  # bare except (used in image loading fallback)
    "F811",  # redefinition of unused name (duplicate Path import)
    "F401",  # unused import (factorion_rs used at runtime via FFI)
]

[tool.ruff.lint.per-file-ignores]
# Green-fields masked-encoder PoC (#160): intentional compact research-script
# style — multiple statements per line and short loop vars. Bug-catching rules
# (F-codes etc.) still apply.
"masked_encoder/*" = ["E701", "E702", "E741"]
"data/*" = ["E701", "E702", "E741"]
