[package]
name = "factorion_rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "factorion_rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.23", optional = true }
numpy = { version = "0.23", optional = true }
nonempty = "0.11"

[features]
default = ["pyo3-bindings"]
pyo3-bindings = ["pyo3/extension-module", "dep:pyo3", "dep:numpy"]

[dev-dependencies]
# dev deps for tests only — the textual factory format (src/textual.rs) is
# #[cfg(test)] and never compiled into the shipped cdylib, so these add no
# weight to the wheel.
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
